src/de/dhbw/db2/youdb/sql/FirstSQLParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g 2011-11-07 09:10:16
 
package de.dhbw.db2.youdb.sql; 

import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;

import de.dhbw.db2.youdb.catalog.objects.Attribute;
import de.dhbw.db2.youdb.catalog.objects.DataType;
import de.dhbw.db2.youdb.catalog.objects.Index;
import de.dhbw.db2.youdb.catalog.objects.Table;
import de.dhbw.db2.youdb.sql.statement.CommitStatement;
import de.dhbw.db2.youdb.sql.statement.Constant;
import de.dhbw.db2.youdb.sql.statement.CreateIndexStatement;
import de.dhbw.db2.youdb.sql.statement.CreateTableStatement;
import de.dhbw.db2.youdb.sql.statement.InsertStatement;
import de.dhbw.db2.youdb.sql.statement.Predicate;
import de.dhbw.db2.youdb.sql.statement.SelectStatement;
import de.dhbw.db2.youdb.sql.statement.SimplePredicate;
import de.dhbw.db2.youdb.sql.statement.Statement;
import de.dhbw.db2.youdb.storage.types.SQLType;

public class FirstSQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EQUAL1", "EQUAL2", "NOT_EQUAL1", "NOT_EQUAL2", "LESS", "LESS_OR_EQ1", "LESS_OR_EQ2", "GREATER", "GREATER_OR_EQ1", "GREATER_OR_EQ2", "SHIFT_LEFT", "SHIFT_RIGHT", "AMPERSAND", "HAT", "PIPE", "DOUBLE_PIPE", "DIV", "STAR", "PLUS", "MINUS", "TILDE", "BACKSLASH", "MOD", "SEMI", "DOT", "COMMA", "LPAREN", "RPAREN", "QUESTION", "AT", "DOLLAR", "QUOTE_DOUBLE", "QUOTE_TRIPLE", "QUOTE_SINGLE", "APOSTROPHE", "LBRACKET", "RBRACKET", "UNDERSCORE", "COLON", "COMMIT", "CREATE", "TABLE", "PRIMARY", "KEY", "UNIQUE", "INDEX", "ON", "SELECT", "FROM", "WHERE", "INSERT", "INTO", "VALUES", "AND", "ID", "INTEGER", "STRING", "TYPE_INT", "TYPE_VARCHAR", "S", "E", "L", "C", "T", "I", "N", "R", "A", "O", "M", "B", "D", "X", "V", "U", "F", "J", "JOIN", "W", "H", "P", "Y", "K", "Q", "G", "WS", "CONTROL_CHAR", "IGNORE_CHAR", "QUOTED_STRING", "DIGIT", "CHAR", "Z"
    };
    public static final int EOF=-1;
    public static final int EQUAL1=4;
    public static final int EQUAL2=5;
    public static final int NOT_EQUAL1=6;
    public static final int NOT_EQUAL2=7;
    public static final int LESS=8;
    public static final int LESS_OR_EQ1=9;
    public static final int LESS_OR_EQ2=10;
    public static final int GREATER=11;
    public static final int GREATER_OR_EQ1=12;
    public static final int GREATER_OR_EQ2=13;
    public static final int SHIFT_LEFT=14;
    public static final int SHIFT_RIGHT=15;
    public static final int AMPERSAND=16;
    public static final int HAT=17;
    public static final int PIPE=18;
    public static final int DOUBLE_PIPE=19;
    public static final int DIV=20;
    public static final int STAR=21;
    public static final int PLUS=22;
    public static final int MINUS=23;
    public static final int TILDE=24;
    public static final int BACKSLASH=25;
    public static final int MOD=26;
    public static final int SEMI=27;
    public static final int DOT=28;
    public static final int COMMA=29;
    public static final int LPAREN=30;
    public static final int RPAREN=31;
    public static final int QUESTION=32;
    public static final int AT=33;
    public static final int DOLLAR=34;
    public static final int QUOTE_DOUBLE=35;
    public static final int QUOTE_TRIPLE=36;
    public static final int QUOTE_SINGLE=37;
    public static final int APOSTROPHE=38;
    public static final int LBRACKET=39;
    public static final int RBRACKET=40;
    public static final int UNDERSCORE=41;
    public static final int COLON=42;
    public static final int COMMIT=43;
    public static final int CREATE=44;
    public static final int TABLE=45;
    public static final int PRIMARY=46;
    public static final int KEY=47;
    public static final int UNIQUE=48;
    public static final int INDEX=49;
    public static final int ON=50;
    public static final int SELECT=51;
    public static final int FROM=52;
    public static final int WHERE=53;
    public static final int INSERT=54;
    public static final int INTO=55;
    public static final int VALUES=56;
    public static final int AND=57;
    public static final int ID=58;
    public static final int INTEGER=59;
    public static final int STRING=60;
    public static final int TYPE_INT=61;
    public static final int TYPE_VARCHAR=62;
    public static final int S=63;
    public static final int E=64;
    public static final int L=65;
    public static final int C=66;
    public static final int T=67;
    public static final int I=68;
    public static final int N=69;
    public static final int R=70;
    public static final int A=71;
    public static final int O=72;
    public static final int M=73;
    public static final int B=74;
    public static final int D=75;
    public static final int X=76;
    public static final int V=77;
    public static final int U=78;
    public static final int F=79;
    public static final int J=80;
    public static final int JOIN=81;
    public static final int W=82;
    public static final int H=83;
    public static final int P=84;
    public static final int Y=85;
    public static final int K=86;
    public static final int Q=87;
    public static final int G=88;
    public static final int WS=89;
    public static final int CONTROL_CHAR=90;
    public static final int IGNORE_CHAR=91;
    public static final int QUOTED_STRING=92;
    public static final int DIGIT=93;
    public static final int CHAR=94;
    public static final int Z=95;

    // delegates
    // delegators


        public FirstSQLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FirstSQLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return FirstSQLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g"; }



    // $ANTLR start "statement"
    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:62:1: statement returns [Statement stmt] : ( ( createTableStatement | createIndexStatement | selectStatement | insertStatement | commitStatement ) ( SEMI )? ) ;
    public final Statement statement() throws RecognitionException {
        Statement stmt = null;

        CreateTableStatement createTableStatement1 = null;

        CreateIndexStatement createIndexStatement2 = null;

        SelectStatement selectStatement3 = null;

        InsertStatement insertStatement4 = null;

        CommitStatement commitStatement5 = null;


        try {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:63:9: ( ( ( createTableStatement | createIndexStatement | selectStatement | insertStatement | commitStatement ) ( SEMI )? ) )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:64:9: ( ( createTableStatement | createIndexStatement | selectStatement | insertStatement | commitStatement ) ( SEMI )? )
            {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:64:9: ( ( createTableStatement | createIndexStatement | selectStatement | insertStatement | commitStatement ) ( SEMI )? )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:65:17: ( createTableStatement | createIndexStatement | selectStatement | insertStatement | commitStatement ) ( SEMI )?
            {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:65:17: ( createTableStatement | createIndexStatement | selectStatement | insertStatement | commitStatement )
            int alt1=5;
            switch ( input.LA(1) ) {
            case CREATE:
                {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==TABLE) ) {
                    alt1=1;
                }
                else if ( ((LA1_1>=UNIQUE && LA1_1<=INDEX)) ) {
                    alt1=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;
                }
                }
                break;
            case SELECT:
                {
                alt1=3;
                }
                break;
            case INSERT:
                {
                alt1=4;
                }
                break;
            case COMMIT:
                {
                alt1=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:66:17: createTableStatement
                    {
                    pushFollow(FOLLOW_createTableStatement_in_statement1060);
                    createTableStatement1=createTableStatement();

                    state._fsp--;


                                    	stmt = createTableStatement1;
                                    

                    }
                    break;
                case 2 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:70:19: createIndexStatement
                    {
                    pushFollow(FOLLOW_createIndexStatement_in_statement1099);
                    createIndexStatement2=createIndexStatement();

                    state._fsp--;


                                    	stmt = createIndexStatement2;
                                    

                    }
                    break;
                case 3 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:74:19: selectStatement
                    {
                    pushFollow(FOLLOW_selectStatement_in_statement1138);
                    selectStatement3=selectStatement();

                    state._fsp--;


                                    	stmt = selectStatement3;
                                    

                    }
                    break;
                case 4 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:78:19: insertStatement
                    {
                    pushFollow(FOLLOW_insertStatement_in_statement1177);
                    insertStatement4=insertStatement();

                    state._fsp--;


                                    	stmt = insertStatement4;
                                    

                    }
                    break;
                case 5 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:82:19: commitStatement
                    {
                    pushFollow(FOLLOW_commitStatement_in_statement1215);
                    commitStatement5=commitStatement();

                    state._fsp--;


                                    	stmt = commitStatement5;
                                    

                    }
                    break;

            }

            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:87:17: ( SEMI )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==SEMI) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:87:17: SEMI
                    {
                    match(input,SEMI,FOLLOW_SEMI_in_statement1269); 

                    }
                    break;

            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return stmt;
    }
    // $ANTLR end "statement"


    // $ANTLR start "commitStatement"
    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:90:1: commitStatement returns [CommitStatement stmt] : ( COMMIT ) ;
    public final CommitStatement commitStatement() throws RecognitionException {
        CommitStatement stmt = null;


                	stmt = new CommitStatement();
                
        try {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:94:9: ( ( COMMIT ) )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:95:9: ( COMMIT )
            {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:95:9: ( COMMIT )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:96:10: COMMIT
            {
            match(input,COMMIT,FOLLOW_COMMIT_in_commitStatement1340); 

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return stmt;
    }
    // $ANTLR end "commitStatement"


    // $ANTLR start "createTableStatement"
    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:100:1: createTableStatement returns [CreateTableStatement stmt] : ( CREATE TABLE tableName LPAREN att1= attributeName type1= sqlType ( PRIMARY KEY )? ( COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )? )* RPAREN ) ;
    public final CreateTableStatement createTableStatement() throws RecognitionException {
        CreateTableStatement stmt = null;

        Attribute att1 = null;

        DataType type1 = null;

        Attribute att2 = null;

        DataType type2 = null;

        Table tableName6 = null;



                	stmt = new CreateTableStatement();
                
        try {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:104:9: ( ( CREATE TABLE tableName LPAREN att1= attributeName type1= sqlType ( PRIMARY KEY )? ( COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )? )* RPAREN ) )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:105:9: ( CREATE TABLE tableName LPAREN att1= attributeName type1= sqlType ( PRIMARY KEY )? ( COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )? )* RPAREN )
            {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:105:9: ( CREATE TABLE tableName LPAREN att1= attributeName type1= sqlType ( PRIMARY KEY )? ( COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )? )* RPAREN )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:106:17: CREATE TABLE tableName LPAREN att1= attributeName type1= sqlType ( PRIMARY KEY )? ( COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )? )* RPAREN
            {
            match(input,CREATE,FOLLOW_CREATE_in_createTableStatement1417); 
            match(input,TABLE,FOLLOW_TABLE_in_createTableStatement1435); 
            pushFollow(FOLLOW_tableName_in_createTableStatement1454);
            tableName6=tableName();

            state._fsp--;


                            	stmt.setTable(tableName6);
                            
            match(input,LPAREN,FOLLOW_LPAREN_in_createTableStatement1491); 
            pushFollow(FOLLOW_attributeName_in_createTableStatement1511);
            att1=attributeName();

            state._fsp--;

            pushFollow(FOLLOW_sqlType_in_createTableStatement1515);
            type1=sqlType();

            state._fsp--;


                            	stmt.addAttribute(att1);
                            	stmt.addType(type1);
                            
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:118:17: ( PRIMARY KEY )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PRIMARY) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:119:17: PRIMARY KEY
                    {
                    match(input,PRIMARY,FOLLOW_PRIMARY_in_createTableStatement1586); 
                    match(input,KEY,FOLLOW_KEY_in_createTableStatement1588); 

                                    	stmt.addPrimaryKey(att1);
                                    

                    }
                    break;

            }

            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:124:17: ( COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )? )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:125:17: COMMA att2= attributeName type2= sqlType ( PRIMARY KEY )?
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_createTableStatement1661); 
            	    pushFollow(FOLLOW_attributeName_in_createTableStatement1665);
            	    att2=attributeName();

            	    state._fsp--;

            	    pushFollow(FOLLOW_sqlType_in_createTableStatement1669);
            	    type2=sqlType();

            	    state._fsp--;


            	                    	stmt.addAttribute(att2);
            	                    	stmt.addType(type2);
            	                    
            	    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:130:17: ( PRIMARY KEY )?
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==PRIMARY) ) {
            	        alt4=1;
            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:131:17: PRIMARY KEY
            	            {
            	            match(input,PRIMARY,FOLLOW_PRIMARY_in_createTableStatement1723); 
            	            match(input,KEY,FOLLOW_KEY_in_createTableStatement1725); 

            	                            	stmt.addPrimaryKey(att2);
            	                            

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,RPAREN,FOLLOW_RPAREN_in_createTableStatement1799); 

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return stmt;
    }
    // $ANTLR end "createTableStatement"


    // $ANTLR start "createIndexStatement"
    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:141:1: createIndexStatement returns [CreateIndexStatement stmt] : ( CREATE ( UNIQUE )? INDEX indexName ON tableName LPAREN attributeName RPAREN ) ;
    public final CreateIndexStatement createIndexStatement() throws RecognitionException {
        CreateIndexStatement stmt = null;

        Index indexName7 = null;

        Table tableName8 = null;

        Attribute attributeName9 = null;



                	stmt = new CreateIndexStatement();
                
        try {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:145:9: ( ( CREATE ( UNIQUE )? INDEX indexName ON tableName LPAREN attributeName RPAREN ) )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:146:9: ( CREATE ( UNIQUE )? INDEX indexName ON tableName LPAREN attributeName RPAREN )
            {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:146:9: ( CREATE ( UNIQUE )? INDEX indexName ON tableName LPAREN attributeName RPAREN )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:147:17: CREATE ( UNIQUE )? INDEX indexName ON tableName LPAREN attributeName RPAREN
            {
            match(input,CREATE,FOLLOW_CREATE_in_createIndexStatement1876); 
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:148:17: ( UNIQUE )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==UNIQUE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:149:17: UNIQUE
                    {
                    match(input,UNIQUE,FOLLOW_UNIQUE_in_createIndexStatement1912); 

                                    	stmt.setUnique(true);
                                    

                    }
                    break;

            }

            match(input,INDEX,FOLLOW_INDEX_in_createIndexStatement1967); 
            pushFollow(FOLLOW_indexName_in_createIndexStatement1985);
            indexName7=indexName();

            state._fsp--;


                            	stmt.setIndex(indexName7);
                            
            match(input,ON,FOLLOW_ON_in_createIndexStatement2021); 
            pushFollow(FOLLOW_tableName_in_createIndexStatement2039);
            tableName8=tableName();

            state._fsp--;


                            	stmt.setTable(tableName8);
                            
            match(input,LPAREN,FOLLOW_LPAREN_in_createIndexStatement2075); 
            pushFollow(FOLLOW_attributeName_in_createIndexStatement2093);
            attributeName9=attributeName();

            state._fsp--;


                            	stmt.setAttribute(attributeName9);
                            
            match(input,RPAREN,FOLLOW_RPAREN_in_createIndexStatement2129); 

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return stmt;
    }
    // $ANTLR end "createIndexStatement"


    // $ANTLR start "selectStatement"
    // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:173:1: selectStatement returns [SelectStatement stmt] : ( SELECT att1= attributeName ( COMMA att2= attributeName )* FROM tab1= tableName ( COMMA tab2= tableName )* ( WHERE predicate )? ) ;
    public final SelectStatement selectStatement() throws RecognitionException {
        SelectStatement stmt = null;

        Attribute att1 = null;

        Attribute att2 = null;

        Table tab1 = null;

        Table tab2 = null;

        Predicate predicate10 = null;



                	stmt = new SelectStatement();
                
        try {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:177:9: ( ( SELECT att1= attributeName ( COMMA att2= attributeName )* FROM tab1= tableName ( COMMA tab2= tableName )* ( WHERE predicate )? ) )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:178:9: ( SELECT att1= attributeName ( COMMA att2= attributeName )* FROM tab1= tableName ( COMMA tab2= tableName )* ( WHERE predicate )? )
            {
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:178:9: ( SELECT att1= attributeName ( COMMA att2= attributeName )* FROM tab1= tableName ( COMMA tab2= tableName )* ( WHERE predicate )? )
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:179:17: SELECT att1= attributeName ( COMMA att2= attributeName )* FROM tab1= tableName ( COMMA tab2= tableName )* ( WHERE predicate )?
            {
            match(input,SELECT,FOLLOW_SELECT_in_selectStatement2206); 
            pushFollow(FOLLOW_attributeName_in_selectStatement2226);
            att1=attributeName();

            state._fsp--;


                            	stmt.addSelectAttribute(att1);
                            
            // /Users/cbinnig/Workspace/DHBW_FirstDB_Loesung3/src/de/dhbw/db2/firstdb/sql/FirstSQL.g:184:17: ( COMMA att2= attributeName )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==COMMA) ) {
                    alt7=1;
                }

